fix:修正/admin/pool/cookies/{domain} 接口响应和格式
